--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,5 +1,5 @@
 {% if results.episodes %}
-  <table class="table" id="episodes-table">
+  <table class="table episodes-table">
     <thead>
       <tr>
         <th class="number">
@@ -21,7 +21,7 @@
     </thead>
     <tbody>
       {% for episode in results.episodes %}
-        <tr class="hover toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}" aria-expanded="false">
+        <tr class="episode-header toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}" aria-expanded="false">
           <th scope="row">
             {% if results.view == 'playlist' %}
               {{ forloop.counter }}
@@ -61,9 +61,9 @@
           </td>
         </tr>
         <tr>
-          <td colspan="5" class="hidden-row">
-            <div class="collapse more-collapse clearfix" id="more-collapse{{ forloop.counter }}">
-              <p class="episode-description">
+          <td colspan="5" class="episode-content">
+            <div class="collapse more-collapse" id="more-collapse{{ forloop.counter }}">
+              <p>
                 {% if episode.description %}
                   {{ episode.description }}
                 {% else %}
