--- a/index/static/style.css
+++ b/index/static/style.css
@@ -162,6 +162,7 @@ button.btn-dope {
 }
 
 /* MULTI BAR */
+/* TODO navbar goes crazy over search hover */
 #dopebar {
   padding: 5px 0;
   min-height: 44px;
@@ -667,7 +668,6 @@ button.btn-dope {
 }
 .episodes-table .new {
   color: rgba(0, 191, 165, 1);
-  background: rgb(255, 255, 255);
   padding: 0 2px;
   border-radius: .25rem;
   border: 2px solid rgba(0, 191, 165, 1);
