--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -7,6 +7,9 @@
             <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
             onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
           </a>
+          <a class="btn-dope unsubscribe-button sub-nix" href="{% url 'unsubscribe' %}" >
+            <i class="fas fa-times-circle"></i>
+          </a>
           <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <h1>
               <strong>
@@ -19,15 +22,8 @@
             {{ subscription.last_updated|date:'d-m-Y H:i' }}
           </p>
           <div class="subscriptions-buttons">
-            <form class="d-inline sub-form" action="{% url 'subscribe' %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="podid" value="{{ podcast.podid }}">
-              <button type="submit" class="btn-dope sub-button">
-                Unsubscribe
-              </button>
-            </form>
             <button class="btn-dope select-subscription">
-              Select
+              <i class="fas fa-check-circle"></i>
             </button>
           </div>
         </div>
