--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -39,7 +39,7 @@ dopepod
     </div>
   </div>
   <div class="row collapse show" id="results-collapse{{ results.drop }}">
-    <div class="col-12 results-buttons">
+    <div class="results-buttons">
       {% if results.view == 'grid' or results.view == 'list' %}
         <a class="btn-dope view-button active" href="{{ results.urls.full_url }}">
           {% if results.view == 'grid' %}
