--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -11,7 +11,7 @@ settings
     <h1>
       Settings
     </h1>
-    <div id="settings-errors">
+    <div class="settings-errors">
       {% if errors %}
         {% for k, v in errors.items %}
           <div class="error-message">
