--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -24,7 +24,7 @@ dopepod
               -
             {% endif %}
           </a>
-          <a class="btn-dope results-close" href="#" aria-label="Close">
+          <a class="btn-dope results-close" href="/" aria-label="Close">
             {% if request.is_ajax %}
               <i class="fas fa-times-circle"></i>
             {% else %}
