--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -1,108 +1,108 @@
 <div class="row">
   {% for episode in results.episodes %}
-  <div class="col-12 last-played-box">
-    <div class="last-played-result clearfix">
-      <a class="showpod" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-        {% if episode.length %}
-        <span class="result-length">
-          {{ episode.length }}
-        </span>
-        {% endif %}
-        <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='http://{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
-      </a>
-      <a class="showpod" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-        <h1>
+    <div class="col-12 last-played-box">
+      <div class="last-played-result clearfix">
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
+          {% if episode.length %}
+          <span class="result-length">
+            {{ episode.length }}
+          </span>
+          {% endif %}
+          <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+          onerror="this.src='http://{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
+        </a>
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
+          <h1>
+            <strong>
+              {{ episode.podcast.title }}
+            </strong>
+          </h1>
+        </a>
+        <h2>
           <strong>
-            {{ episode.podcast.title }}
+            {{ episode.title }}
           </strong>
-        </h1>
-      </a>
-      <h2>
-        <strong>
-          {{ episode.title }}
-        </strong>
-      </h2>
-      <table>
-        <tr>
-          <td>
-            released
-          </td>
-          <td>
-            {{ episode.pubDate|date:'d-m-Y H:i' }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            played
-          </td>
-          <td>
-            {{ episode.played_ago }}
-          </td>
-        </tr>
-      </table>
-      <div class="collapse last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
+        </h2>
         <table>
           <tr>
             <td>
-              Genre
+              released
             </td>
             <td>
-              {{ episode.podcast.get_primary_genre }}
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Language
-            </td>
-            <td>
-              {{ episode.podcast.language }}
+              {{ episode.pubDate|date:'d-m-Y H:i' }}
             </td>
           </tr>
           <tr>
             <td>
-              Subscribers
+              played
             </td>
             <td>
-              {{ episode.podcast.get_n_subscribers }}
+              {{ episode.played_ago }}
             </td>
           </tr>
         </table>
-        <p>
-          {% if episode.description %}
-            {{ episode.description }}
-          {% else %}
-            No description
-          {% endif %}
-        </p>
-        <div class="last-played-buttons">
-          <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST" target="_blank">
-            {% csrf_token %}
-            <input type="hidden" name="mode" value="play" />
-            <input type="hidden" name="signature" value="{{ episode.signature }}" />
-            <button class="btn-dope active" type="submit">
-              Play
-            </button>
-          </form>
-          {% if user.is_authenticated %}
-            <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST">
+        <div class="collapse last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
+          <table>
+            <tr>
+              <td>
+                Genre
+              </td>
+              <td>
+                {{ episode.podcast.get_primary_genre }}
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Language
+              </td>
+              <td>
+                {{ episode.podcast.language }}
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Subscribers
+              </td>
+              <td>
+                {{ episode.podcast.get_n_subscribers }}
+              </td>
+            </tr>
+          </table>
+          <p>
+            {% if episode.description %}
+              {{ episode.description }}
+            {% else %}
+              No description
+            {% endif %}
+          </p>
+          <div class="last-played-buttons">
+            <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST" target="_blank">
               {% csrf_token %}
-              <input type="hidden" name="mode" value="add" />
+              <input type="hidden" name="mode" value="play" />
               <input type="hidden" name="signature" value="{{ episode.signature }}" />
               <button class="btn-dope active" type="submit">
-                Add to Playlist
+                Play
               </button>
             </form>
-          {% endif %}
-          <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
-            Download
-          </a>
+            {% if user.is_authenticated %}
+              <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="mode" value="add" />
+                <input type="hidden" name="signature" value="{{ episode.signature }}" />
+                <button class="btn-dope active" type="submit">
+                  Add to Playlist
+                </button>
+              </form>
+            {% endif %}
+            <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
+              Download
+            </a>
+          </div>
         </div>
+        <button class="last-played-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
+          <i class="fas fa-angle-down"></i>
+        </button>
       </div>
-      <button class="last-played-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
-        <i class="fas fa-angle-down"></i>
-      </button>
     </div>
-  </div>
   {% endfor %}
 </div>
